Fix controls yaml

--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -3,7 +3,7 @@ policy: 'Fedora Common User Security Policy'
 title: 'Fedora Common User Security Policy'
 id: cusp_fedora
 version: '1.0.0'
-source: jodehnal's bachelor thesis on creating a SCAP profile for common users of Fedora workstation - link will be added after publication
+source: "jodehnal's bachelor thesis on creating a SCAP profile for common users of Fedora workstation - link will be added after publication"
 
 controls:
   ###
