Fix iterator of path_exists items

--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/ansible/shared.yml
@@ -24,7 +24,7 @@
 
 - name: Ensure group and world cannot access respective .netrc files
   ansible.builtin.file:
-    path: '{{ item.value[4] }}/.netrc'
+    path: '{{ item.item.value[4] }}/.netrc'
     mode: '0600'
     state: file
   loop: '{{ path_exists.results }}'
