Add platform to UFW rules

--- a/linux_os/guide/system/network/network-ufw/set_ufw_loopback_traffic/rule.yml
+++ b/linux_os/guide/system/network/network-ufw/set_ufw_loopback_traffic/rule.yml
@@ -18,6 +18,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[ufw]
+
 references:
     cis@ubuntu2004: 3.5.1.4
     cis@ubuntu2204: 3.5.1.4
