Add platform to iptables rules

--- a/linux_os/guide/system/network/network-iptables/iptables_activation/set_ipv6_loopback_traffic/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/set_ipv6_loopback_traffic/rule.yml
@@ -16,6 +16,8 @@ rationale: |-
 
 severity: medium
 
+platform: not package[nftables] and not package[ufw]
+
 identifiers:
     cce@sle12: CCE-92215-3
     cce@sle15: CCE-91346-7
