--- a/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
@@ -20,6 +20,8 @@ rationale: |-
 
 severity: medium
 
+platform: not package[nftables] and not package[ufw]
+
 identifiers:
     cce@rhel7: CCE-86718-4
     cce@rhel8: CCE-85965-2
