--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/ip6tables_rules_for_open_ports/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/ip6tables_rules_for_open_ports/rule.yml
@@ -14,6 +14,8 @@ rationale: |-
 
 severity: medium
 
+platform: not package[nftables] and not package[ufw]
+
 identifiers:
     cce@rhel7: CCE-86800-0
     cce@rhel8: CCE-86801-8
