--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_default_rule/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_default_rule/rule.yml
@@ -18,6 +18,8 @@ rationale: |-
 
 severity: medium
 
+platform: not package[nftables] and not package[ufw]
+
 identifiers:
     cce@rhel7: CCE-86719-2
     cce@rhel8: CCE-85968-6
