applicability: Add nftables and ufw to package applicability

--- a/shared/applicability/package.yml
+++ b/shared/applicability/package.yml
@@ -26,6 +26,8 @@ args:
     {{% else %}}
       pkgname: snmp
     {{% endif %}}
+  nftables:
+      pkgname: nftables
   nss-pam-ldapd:
     {{% if pkg_system == "rpm" %}}
       pkgname: nss-pam-ldapd
@@ -69,6 +71,8 @@ args:
     pkgname: tftp-server
   tmux:
     pkgname: tmux
+  ufw:
+    pkgname: ufw
   usbguard:
     pkgname: usbguard
   yum:
