OCP4: Add rules for SRG-APP-000456-CTR-001125
The rules make sure that there are allowed registries set for both pulls
and imports and that all imagestreams check for updates.

--- a/controls/srg_ctr/SRG-APP-000456-CTR-001125.yml
+++ b/controls/srg_ctr/SRG-APP-000456-CTR-001125.yml
@@ -5,4 +5,9 @@ controls:
   title: '{{{ full_name }}} registry must contain the latest images with most
     recent updates and execute within the container platform runtime as authorized
     by IAVM, CTOs, DTMs, and STIGs. '
-  status: pending
+  status: automated
+  rules:
+    - imagestream_sets_schedule
+    - ocp_allowed_registries
+    - ocp_allowed_registries_for_import
+
