Update CIS requirement for SSH access limit
The 5.3.4 CIS requirement for RHEL7 and 5.2.4 CIS requirement for RHEL8
and RHEL9 were updated to automated status by using the
sshd_limit_user_access rule. This rule now has OVAL and tests. There is
no automated remediation for this rule because it varies for each
system depending on site policies.

--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -1979,17 +1979,14 @@ controls:
     rules:
       - file_permissions_sshd_pub_key
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/7196
   - id: 5.2.4
     title: Ensure SSH access is limited (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: planned
-    related_rules:
+    status: automated
+    rules:
       - sshd_limit_user_access
-      # Missing OVAL
 
   - id: 5.2.5
     title: Ensure SSH LogLevel is appropriate (Automated)
