--- a/linux_os/guide/services/ssh/ssh_server/sshd_limit_user_access/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_limit_user_access/rule.yml
@@ -46,13 +46,14 @@ identifiers:
     cce@rhcos4: CCE-82664-4
     cce@rhel7: CCE-80219-9
     cce@rhel8: CCE-82422-7
+    cce@rhel9: CCE-86817-4
     cce@sle12: CCE-92212-0
     cce@sle15: CCE-91343-4
 
 references:
     cis-csc: 11,12,14,15,16,18,3,5
     cis@alinux2: 5.2.18
-    cis@rhel7: 5.2.14
+    cis@rhel7: 5.3.4
     cis@rhel8: 5.2.4
     cis@rhel9: 5.2.4
     cis@sle12: 5.2.4
