--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1779,7 +1779,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - sshd_limit_user_access
 
   - id: 5.3.5
     title: Ensure SSH LogLevel is appropriate (Automated)
