Update netrc requirement in CIS for RHEL8
Included the accounts_users_netrc_file_permissions rule in the CIS
controlfile for RHEL8.

--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -2656,11 +2656,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: supported
-    notes: |-
-      It is not expected this requirement be automated in favor of 6.2.15.
-    related_rules:
-      - no_netrc_files
+    status: automated
+    rules:
+      - accounts_users_netrc_file_permissions
 
   - id: 6.2.14
     title: Ensure no users have .forward files (Automated)
