--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15
+prodtype: rhel8,sle12,sle15
 
 title: "Ensure users' .netrc Files are not group or world accessible"
 
@@ -19,10 +19,12 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel8: CCE-87369-5
     cce@sle12: CCE-92446-4
     cce@sle15: CCE-92697-2
 
 references:
+    cis@rhel8: 6.2.13
     cis@sle12: 6.2.11
     cis@sle15: 6.2.11
 
