add warning explaining the change

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
@@ -97,3 +97,9 @@ warnings:
         <li><tt>audit_rules_privileged_commands_umount</tt></li>
         <li><tt>audit_rules_privileged_commands_passwd</tt></li>
         </ul>
+    - general: |-
+        Note that OVAL check and Bash / Ansible remediation of this rule
+        explicitly excludes file systems mounted at <pre>/proc</pre> directory
+        and its subdirectories. It is a virtual file system and it doesn't
+        contain executable applications. At the same time, interacting with this
+        file system during check or remediation caused undesirable errors.
