--- a/linux_os/guide/system/software/updating/ensure_oracle_gpgkey_installed/rule.yml
+++ b/linux_os/guide/system/software/updating/ensure_oracle_gpgkey_installed/rule.yml
@@ -43,6 +43,7 @@ references:
     nist-csf: PR.DS-6,PR.DS-8,PR.IP-1
     pcidss: Req-6.2
     stigid@ol7: OL07-00-010019
+    stigid@ol8: OL08-00-010019
 
 ocil_clause: 'the Oracle GPG Key is not installed'
 
