Add sysctl disable_ipv6 rule to CIS 3.1.1
- Include sysctl_net_ipv6_conf_all_disable_ipv6 rule,
  to CIS requirement 3.1.1 for SLE platforms.
- Update CIS controls for sle12 and sle15
- Allocate CCEs

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -827,6 +827,7 @@ controls:
     status: automated
     rules:
       - grub2_ipv6_disable_argument
+      - sysctl_net_ipv6_conf_all_disable_ipv6
 
   - id: 3.1.2
     title: Ensure wireless interfaces are disabled (Manual)
