--- a/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
@@ -19,10 +19,14 @@ identifiers:
     cce@rhel7: CCE-80175-3
     cce@rhel8: CCE-85904-1
     cce@rhel9: CCE-86215-1
+    cce@sle12: CCE-92359-9
+    cce@sle15: CCE-92496-9
 
 references:
     anssi: BP28(R13)
     cis-csc: 11,14,3,9
+    cis@sle12: 3.1.1
+    cis@sle15: 3.1.1
     cobit5: BAI10.01,BAI10.02,BAI10.03,BAI10.05,DSS05.02,DSS05.05,DSS06.06
     cui: 3.1.20
     disa: CCI-001551
