--- a/linux_os/guide/system/software/gnome/gnome_login_screen/dconf_gnome_disable_user_list/rule.yml
+++ b/linux_os/guide/system/software/gnome/gnome_login_screen/dconf_gnome_disable_user_list/rule.yml
@@ -44,6 +44,7 @@ references:
     cis@ubuntu2204: 1.8.3
     nist: CM-6(a),AC-23
     srg: SRG-OS-000480-GPOS-00227
+    stigid@ol7: OL07-00-010063
     stigid@ol8: OL08-00-020032
     stigid@rhel8: RHEL-08-020032
 
