--- a/linux_os/guide/system/software/updating/ensure_oracle_gpgkey_installed/rule.yml
+++ b/linux_os/guide/system/software/updating/ensure_oracle_gpgkey_installed/rule.yml
@@ -42,6 +42,7 @@ references:
     nist: CM-5(3),SI-7,SC-12,SC-12(3),CM-6(a),CM-11(a),CM-11(b)
     nist-csf: PR.DS-6,PR.DS-8,PR.IP-1
     pcidss: Req-6.2
+    stigid@ol7: OL07-00-010019
 
 ocil_clause: 'the Oracle GPG Key is not installed'
 
