--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_pwhistory_remember/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_pwhistory_remember/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15,ubuntu2004,ubuntu2204
+prodtype: sle12,sle15,ubuntu2004
 
 title: 'Limit Password Reuse'
 
@@ -27,7 +27,6 @@ references:
     cis@sle12: 5.3.3
     cis@sle15: 5.3.3
     cis@ubuntu2004: 5.3.3
-    cis@ubuntu2204: 5.4.3
     disa: CCI-000200
     nist@sle12: IA-5(1)(e),IA-5 (1).1(v)
     srg: SRG-OS-000077-GPOS-00045
