Update jinja conditionals that apply to any ol
There are many jinja conditionals in the repo that apply to all major
releases of OL, but where included as a list of them, and didn't
include OL9. Updated to be more generic in OL products

Signed-off-by: Edgar Aguilar <edgar.aguilar@oracle.com>

--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/group.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/group.yml
@@ -5,7 +5,7 @@ title: 'Hardware Tokens for Authentication'
 description: |-
     The use of hardware tokens such as smart cards for system login
     provides stronger, two-factor authentication than using a username and password.
-    {{% if product in ['ol7', 'ol8'] %}}
+    {{% if 'ol' in product %}}
     In {{{ full_name }}} servers, hardware token login
     {{% else %}}
     In Red Hat Enterprise Linux servers and workstations, hardware token login
