--- a/linux_os/guide/system/software/gnome/gnome_login_screen/group.yml
+++ b/linux_os/guide/system/software/gnome/gnome_login_screen/group.yml
@@ -8,7 +8,7 @@ description: |-
     login automatically and/or with a guest account. The login screen should be configured
     to prevent such behavior.
     <br /><br />
-    {{% if product in ["ol7", "ol8"] %}}
+    {{% if "ol" in product %}}
     For more information about enforcing preferences in the GNOME3 environment using the DConf
     configuration system, see <b>{{{ weblink(link="http://wiki.gnome.org/dconf") }}}</b> and
     the man page <tt>dconf(1)</tt>.
