--- a/linux_os/guide/system/software/gnome/group.yml
+++ b/linux_os/guide/system/software/gnome/group.yml
@@ -9,7 +9,7 @@ description: |-
     switching contexts as well as display server management.
     <br /><br />
     GNOME is developed by the GNOME Project and is considered the default
-    {{% if product in ['ol7', 'ol8'] %}}
+    {{% if 'ol' in product %}}
     Oracle Linux Graphical environment.
     {{% else %}}
     Red Hat Graphical environment.
