--- a/linux_os/guide/system/software/integrity/endpoint_security_software/group.yml
+++ b/linux_os/guide/system/software/integrity/endpoint_security_software/group.yml
@@ -4,7 +4,7 @@ title: 'Endpoint Protection Software'
 
 description: |-
     Endpoint protection security software that is not provided or supported
-    {{% if product in ["ol7", "ol8"] %}}
+    {{% if 'ol' in product %}}
     by Oracle Corporation can be installed to provide complementary or duplicative
     {{% else %}}
     by Red Hat can be installed to provide complementary or duplicative
