Update jinja conditionals that apply to OL8
At this moment many of the rules that apply to OL9 are based on OL8
behavior. So updated jinja conditionals that apply to OL8 to also apply
to OL9

Signed-off-by: Edgar Aguilar <edgar.aguilar@oracle.com>

--- a/linux_os/guide/system/auditing/auditd_configure_rules/file_permissions_var_log_audit/ansible/shared.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/file_permissions_var_log_audit/ansible/shared.yml
@@ -24,7 +24,7 @@
     log_file: "{{ log_file_line.stdout | trim }}"
   when: (log_file_line.stdout is defined) and (log_file_line.stdout | length > 0)
 
-{{% if product not in ["ol8"] and "rhel" not in product %}}
+{{% if 'ol' not in product and "rhel" not in product %}}
 - name: Get log files group
   command: grep -m 1 ^log_group /etc/audit/auditd.conf
   failed_when: false
