--- a/linux_os/guide/system/accounts/accounts-physical/require_emergency_target_auth/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/require_emergency_target_auth/ansible/shared.yml
@@ -4,13 +4,23 @@
 # complexity = low
 # disruption = low
 
+{{% if 'sle' in product %}}
+- name: Require emergency mode password
+  ansible.builtin.blockinfile:
+      create: yes
+      dest: /etc/systemd/system/emergency.service.d/10-oscap.conf
+      block: |
+        [Service]
+        ExecStart=-/usr/lib/systemd/systemd-sulogin-shell emergency
+{{% else %}}
 - name: Require emergency mode password
   lineinfile:
       create: yes
       dest: /usr/lib/systemd/system/emergency.service
       regexp: "^#?ExecStart="
-      {{% if product in ["fedora", "ol8", "ol9", "rhel8", "rhel9","sle12", "sle15"] -%}}
+      {{% if product in ["fedora", "ol8", "ol9", "rhel8", "rhel9"] -%}}
       line: "ExecStart=-/usr/lib/systemd/systemd-sulogin-shell emergency"
       {{%- else -%}}
       line: 'ExecStart=-/bin/sh -c "/sbin/sulogin; /usr/bin/systemctl --fail --no-block default"'
       {{%- endif %}}
+{{% endif %}}
