RHCOS4 STIG: AC-2(4),AU-12(c): Controls covered with audit_rules_sysadmin_actions and audit_rules_usergroup_modification

--- a/controls/srg_ctr/SRG-APP-000509-CTR-001305.yml
+++ b/controls/srg_ctr/SRG-APP-000509-CTR-001305.yml
@@ -6,4 +6,8 @@ controls:
     modifications, disabling, and termination events.
   related_rules:
   - audit_profile_set
-  status: inherently met
+  rules:
+  - audit_rules_sysadmin_actions
+  - audit_rules_usergroup_modification
+  status: automated
+
