Update CIS requirement status for umask requirement
The rule used to check and remediate the umask value in /etc/profile was
updated to also consider script files within /etc/profile.d, where is
also a valid place to define profile settings. This update was the
reason the respective CIS controls for RHEL were set as partial. They
are now automated.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2114,7 +2114,7 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # checking only for numeric umask and we do not check for user_enab in /etc/login.defs
+    status: automated
     rules:
     - accounts_umask_etc_bashrc
     - accounts_umask_etc_login_defs
