--- a/.github/workflows/gate-lint-ansible-roles.yaml
+++ b/.github/workflows/gate-lint-ansible-roles.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Build, Lint Ansible Roles on Fedora Latest (Container)
     runs-on: ubuntu-latest
     container:
-      image: fedora:37
+      image: fedora:latest
     steps:
       - name: Install Deps
         run: dnf install -y cmake make ninja-build openscap-utils python3-pyyaml python3-setuptools python3-jinja2 python3-pygithub ansible ansible-lint libxslt git
