--- a/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
@@ -58,7 +58,7 @@ references:
 ocil_clause: 'ENCRYPT_METHOD is not set to {{{ xccdf_value("var_password_hashing_algorithm") }}}'
 
 ocil: |-
-    {{% if product in ['rhel9'] -%}}
+    {{% if product in ['ol9', 'rhel9'] -%}}
     Verify that the shadow password suite configuration is set to encrypt password with a FIPS 140-3 approved cryptographic hashing algorithm.
     {{% else %}}
     Verify that the shadow password suite configuration is set to encrypt password with a FIPS 140-2 approved cryptographic hashing algorithm.
@@ -70,7 +70,7 @@ ocil: |-
 
     ENCRYPT_METHOD {{{ xccdf_value("var_password_hashing_algorithm") }}}
 
-{{% if product in ['rhel9'] -%}}
+{{% if product in ['ol9', 'rhel9'] -%}}
 srg_requirement: 'The {{{ full_name }}} pam_unix.so module must be configured in the system-auth file to use a FIPS 140-3 approved cryptographic hashing algorithm for system authentication.'
 {{%- endif %}}
 
