--- a/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_passwordauth/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_passwordauth/rule.yml
@@ -71,7 +71,7 @@ ocil: |-
     <tt>sha512</tt>:
     <pre>$ grep sha512 /etc/pam.d/password-auth</pre>
 
-{{% if product in ['rhel9'] %}}
+{{% if product in ['ol9', 'rhel9'] %}}
 srg_requirement: 'The {{{ full_name }}} pam_unix.so module must be configured in the password-auth file to use a FIPS 140-3 approved cryptographic hashing algorithm for system authentication.'
 
 fixtext: |-
