--- a/.github/workflows/gate.yaml
+++ b/.github/workflows/gate.yaml
@@ -58,11 +58,11 @@ jobs:
       - name: Update the package repository
         run: apt-get update
       - name: Install Deps
-        run: apt-get install -y ansible-lint bats check cmake libopenscap8 libxml2-utils ninja-build python3-github python3-jinja2 python3-setuptools python3-pip python3-pytest python3-pytest-cov xsltproc
-      - name: Install deps python
-        run: pip3 install ruamel.yaml yamlpath pyyaml==5.4.1
+        run: apt-get install -y ansible-lint bats check cmake libopenscap8 libxml2-utils ninja-build python3-github python3-pip xsltproc
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install deps python
+        run: pip3 install -r requirements.txt -r test-requirements.txt
       - name: Build
         env:
           ADDITIONAL_CMAKE_OPTIONS: "-DSSG_ANSIBLE_PLAYBOOKS_PER_RULE_ENABLED=ON"
@@ -129,11 +129,11 @@ jobs:
       image: fedora:latest
     steps:
       - name: Install Deps
-        run: dnf install -y cmake make openscap-utils python3-pyyaml python3-setuptools python3-jinja2 bats python3-pytest python3-pytest-cov ansible python3-pip ShellCheck git python3-mypy python3-lxml
-      - name: Install deps python
-        run: pip install ruamel.yaml yamlpath types-openpyxl types-PyYAML xmldiff openpyxl openpyxl-stubs pandas cmakelint
+        run: dnf install -y cmake make openscap-utils python3-pyyaml bats ansible python3-pip ShellCheck git
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install deps python
+        run: pip install -r requirements.txt -r test-requirements.txt
       - name: Build
         run: |-
           ./build_product \
@@ -179,11 +179,11 @@ jobs:
       -   name: Run Updates
           run: dnf update -y
       -   name: Install Deps
-          run: dnf install -y cmake make openscap-utils python3-pyyaml python3-jinja2 bats python3-pytest python3-pytest-cov ansible python3-pip ShellCheck python-mypy git
-      -   name: Install deps python
-          run: pip install ruamel.yaml yamlpath types-openpyxl types-PyYAML openpyxl openpyxl-stubs pandas
+          run: dnf install -y cmake make openscap-utils bats ansible python3-pip ShellCheck git
       -   name: Checkout
           uses: actions/checkout@v3
+      -   name: Install deps python
+          run: pip install -r requirements.txt -r test-requirements.txt
       -   name: Build
           run: |-
             ./build_product \
