--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1483,7 +1483,9 @@ controls:
     levels:
       - l2_server
       - l2_workstation
-    status: planned
+    status: automated
+    rules:
+      - file_permissions_audit_configuration
 
   - id: 4.1.4.6
     title: Ensure audit configuration files are owned by root (Automated)
