Set service_nftables_enabled as machine only
This aligns the rule with service_nftables_disabled.

--- a/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
@@ -36,6 +36,8 @@ ocil: |-
 fixtext: |-
     {{{ fixtext_service_enabled("nftables") }}}
 
+platform: machine
+
 template:
     name: service_enabled
     vars:
