--- a/linux_os/guide/services/ssh/file_permissions_sshd_private_key/ansible/shared.yml
+++ b/linux_os/guide/services/ssh/file_permissions_sshd_private_key/ansible/shared.yml
@@ -7,8 +7,16 @@
 {{% set find_command_base = 'find -H /etc/ssh/ -maxdepth 1 -user root -regex ".*_key$" -type f' %}}
 {{% set dedicated_ssh_groupname = groups.get("dedicated_ssh_keyowner", {}).get("name") %}}
 
+{{% if product in ["sle12", "sle15"] %}}
+{{% set find_command = find_command_base + ' -group root -perm /u+xs,g+xws,o+xwrt' %}}
+{{% set permissions_mode = 'u-xs,g-xws,o-xwrt' %}}
+{{% else %}}
+{{% set find_command = find_command_base + ' -group root -perm /u+xs,g+xwrs,o+xwrt' %}}
+{{% set permissions_mode = 'u-xs,g-xwrs,o-xwrt' %}}
+{{% endif %}}
+
 - name: Find root:root-owned keys
-  command: '{{{ find_command_base }}} -group root -perm /u+xs,g+xwrs,o+xwrt'
+  command: '{{{ find_command }}}'
   register: root_owned_keys
   changed_when: False
   failed_when: False
@@ -17,7 +25,7 @@
 - name: Set permissions for root:root-owned keys
   file:
     path: "{{ item }}"
-    mode: "u-xs,g-xwrs,o-xwrt"
+    mode: '{{{ permissions_mode }}}'
     state: file
   with_items:
     - "{{ root_owned_keys.stdout_lines }}"
