remove @Base from RHEL kickstarts
The @base group is normally hidden (does not show up in
'dnf group list') and generally meant to be used as a base
for other, more visible, groups.

While the @base group itself is not deprecated, it likely
makes more sense to just rely on the default, which is
"Minimal install", a.k.a. @core, and let the users opt-into
additional packages.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel8/kickstart/ssg-rhel8-e8-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-e8-ks.cfg
@@ -100,11 +100,7 @@ autopart
 
 # Packages selection (%packages section is required)
 %packages
-
-# Require @Base
-@Base
-
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
