--- a/products/rhel8/kickstart/ssg-rhel8-stig-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-stig-ks.cfg
@@ -144,11 +144,7 @@ logvol swap --name=swap --vgname=VolGroup --size=2016
 
 # Packages selection (%packages section is required)
 %packages
-
-# Require @Base
-@Base
-
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
