--- a/products/rhel7/kickstart/ssg-rhel7-pci-dss-server-with-gui-oaa-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-pci-dss-server-with-gui-oaa-ks.cfg
@@ -124,7 +124,7 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 # Require 'Server with GUI' package environment to be installed
 @^Server with GUI
 
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
