--- a/products/rhel7/kickstart/ssg-rhel7-stig_gui-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-stig_gui-ks.cfg
@@ -111,12 +111,11 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 
 # Packages selection (%packages section is required)
 %packages
+
 # Graphical User Interface package group
 @^graphical-server-environment
-# Require @Base
-@Base
 
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
