--- a/products/rhel9/kickstart/ssg-rhel9-cis_server_l1-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-cis_server_l1-ks.cfg
@@ -114,11 +114,7 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 
 # Packages selection (%packages section is required)
 %packages
-
-# Require @Base
-@Base
-
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
