--- a/products/rhel9/kickstart/ssg-rhel9-hipaa-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-hipaa-ks.cfg
@@ -100,11 +100,7 @@ autopart
 
 # Packages selection (%packages section is required)
 %packages
-
-# Require @Base
-@Base
-
-%end # End of %packages section
+%end
 
 # Reboot after the installation is complete (optional)
 # --eject	attempt to eject CD or DVD media before rebooting
