install RHEL stig_gui kickstarts with 'Server with GUI' packages
The '@^graphical-server-environment' is just an internal name for
the human name, 'Server with GUI', which is consistent across RHEL
releases.

The need for '^' on RHEL-7 is due to it being an "environment group"
as opposed to a regular "package group". RHEL-8+ Anaconda does not
have this distinction.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel7/kickstart/ssg-rhel7-stig_gui-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-stig_gui-ks.cfg
@@ -112,8 +112,7 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 # Packages selection (%packages section is required)
 %packages
 
-# Graphical User Interface package group
-@^graphical-server-environment
+@^Server with GUI
 
 %end
 
