--- a/products/rhel8/kickstart/ssg-rhel8-stig_gui-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-stig_gui-ks.cfg
@@ -143,6 +143,9 @@ logvol swap --name=swap --vgname=VolGroup --size=2016
 
 # Packages selection (%packages section is required)
 %packages
+
+@Server with GUI
+
 %end
 
 # Reboot after the installation is complete (optional)
