--- a/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_temp_expire_date/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_temp_expire_date/rule.yml
@@ -43,6 +43,7 @@ references:
     nist: AC-2(2),AC-2(3),CM-6(a)
     nist-csf: DE.CM-1,DE.CM-3,PR.AC-1,PR.AC-4,PR.AC-6
     srg: SRG-OS-000123-GPOS-00064,SRG-OS-000002-GPOS-00002
+    stigid@ol7: OL07-00-010271
     stigid@ol8: OL08-00-020000
     stigid@rhel8: RHEL-08-020000
     stigid@sle12: SLES-12-010360
