--- a/linux_os/guide/services/mail/package_mailx_installed/rule.yml
+++ b/linux_os/guide/services/mail/package_mailx_installed/rule.yml
@@ -16,6 +16,7 @@ references:
     disa: CCI-001744
     nist: CM-3(5)
     srg: SRG-OS-000363-GPOS-00150
+    stigid@ol7: OL07-00-020028
     stigid@ol8: OL08-00-010358
 
 ocil_clause: 'the package is not installed'
