--- a/products/rhel8/kickstart/ssg-rhel8-cis_workstation_l2-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-cis_workstation_l2-ks.cfg
@@ -92,7 +92,7 @@ part /boot --fstype=xfs --size=512
 part pv.01 --grow --size=1
 
 # Create a Logical Volume Management (LVM) group (optional)
-volgroup VolGroup --pesize=4096 pv.01
+volgroup VolGroup pv.01
 
 # Create particular logical volumes (optional)
 logvol / --fstype=xfs --name=LogVol06 --vgname=VolGroup --size=10240 --grow
