--- a/products/rhel9/kickstart/ssg-rhel9-cis_workstation_l1-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-cis_workstation_l1-ks.cfg
@@ -95,7 +95,7 @@ part pv.01 --grow --size=1
 part /dev/shm --fstype=tmpfs --fsoptions="nodev,nosuid,noexec" --size=512
 
 # Create a Logical Volume Management (LVM) group (optional)
-volgroup VolGroup --pesize=4096 pv.01
+volgroup VolGroup pv.01
 
 # Create particular logical volumes (optional)
 logvol / --fstype=xfs --name=LogVol06 --vgname=VolGroup --size=16384 --grow
