--- a/shared/applicability/non-uefi.yml
+++ b/shared/applicability/non-uefi.yml
@@ -1,5 +1,5 @@
 name: cpe:/a:non-uefi
 title: System boot mode is non-UEFI
 check_id: system_boot_mode_is_non_uefi
-bash_conditional: '[ ! -f /sys/firmware/efi ]'
+bash_conditional: '[ ! -d /sys/firmware/efi ]'
 ansible_conditional: '"/boot/efi" not in ansible_mounts | map(attribute="mount") | list'
